k8s/base.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - image: symbiosiscloud/demo-app:0.9
        imagePullPolicy: Always
        name: test-app
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-app
  type: LoadBalancer


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: test-app
  type: LoadBalancer
